# l-cpp

./: README.md  notes  shell.nix
cmake/book/first/: notes
cmake/book/first-module/: .gitignore  CMakeLists.txt  hello.cpp  myhello.cpp  notes
cmake/first/: hello  notes
cmakeinit/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  notes
cmakeinit/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cmakeinit/source/: lib.cpp
cmakeinit/test/: CMakeLists.txt
cmakeinit/test/source/: cmakeinit_test.cpp
first/: CMakeLists.txt  CMakePresets.json  notes
first/cmake/presets/: base.json  x86-linux.json
first/src/: main.cpp
gcm.cache/: my_module.gcm
learning/: a.out  hello.cpp  module.cpp  module_impl.cpp  notes
learning/gcm.cache/: my_module.gcm
