cmake_minimum_required(VERSION 3.14)

include(cmake/prelude.cmake)

project(
    cmakeinit
    VERSION 0.1.0
    DESCRIPTION "Short description"
    HOMEPAGE_URL "https://example.com/"
    LANGUAGES CXX
)

include(cmake/project-is-top-level.cmake)
include(cmake/variables.cmake)

# ---- Declare library ----

add_library(
    cmakeinit_lib OBJECT
    source/lib.cpp
)

target_include_directories(
    cmakeinit_lib ${warning_guard}
    PUBLIC
    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
)

target_compile_features(cmakeinit_lib PUBLIC cxx_std_20)

# ---- Declare executable ----

add_executable(cmakeinit_exe source/main.cpp)
add_executable(cmakeinit::exe ALIAS cmakeinit_exe)

set_property(TARGET cmakeinit_exe PROPERTY OUTPUT_NAME cmakeinit)

target_compile_features(cmakeinit_exe PRIVATE cxx_std_20)

target_link_libraries(cmakeinit_exe PRIVATE cmakeinit_lib)

# ---- Install rules ----

if(NOT CMAKE_SKIP_INSTALL_RULES)
  include(cmake/install-rules.cmake)
endif()

# ---- Developer mode ----

if(NOT cmakeinit_DEVELOPER_MODE)
  return()
elseif(NOT PROJECT_IS_TOP_LEVEL)
  message(
      AUTHOR_WARNING
      "Developer mode is intended for developers of cmakeinit"
  )
endif()

include(cmake/dev-mode.cmake)
